--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-IE">
 	<head>
-		<title>Anton's WAMPServer</title>
+		<title>Anton's Website</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8">
+		<style>
+			body{
+				margin: 0;
+				padding: 0;
+				border: 0;
+				font-size: 100%;
+				font: inherit;
+				vertical-align: baseline;
+				background-color: forestgreen;
+				color: white;
+			}
+			header {
+				background: lightgreen;
+				padding: 15px;
+			}
+			section {
+				margin: 1%;
+			}
+		</style>
 	</head>
 	
 	<body>
-		<h1>Welcome to Anton's Page</h1>
+		<header>
+			<h1 style="text-align: center; color: black;">Welcome to Anton's Page</h1>
+		</header>
+		<section>
+			<p></p>
+		</section>
 	</body>
 </html>
