--- a/index.html
+++ b/index.html
@@ -4,25 +4,7 @@
 		<title>Anton's Website</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
-		<style>
-			body{
-				margin: 0;
-				padding: 0;
-				border: 0;
-				font-size: 100%;
-				font: inherit;
-				vertical-align: baseline;
-				background-color: forestgreen;
-				color: white;
-			}
-			header {
-				background: lightgreen;
-				padding: 15px;
-			}
-			section {
-				margin: 1%;
-			}
-		</style>
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	
 	<body>
