Slight Changes to title and favicon

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 			<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 			<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 			<link rel="manifest" href="/site.webmanifest">
-			<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-			<meta name="msapplication-TileColor" content="#da532c">
-			<meta name="theme-color" content="#ffffff">
+			<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#228B22">
+			<meta name="msapplication-TileColor" content="#228B22">
+			<meta name="theme-color" content="#228B22">
 	</head>
 	
 	<body>
 		<header>
-			<h1 style="text-align: center; color: black;">Welcome to Anton's Page</h1>
+			<h1 style="text-align: center; color: black;">Welcome to Anton's Website</h1>
 		</header>
 		<section>
 			<p></p>
