Add a navbar + change website bg color

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
 		<header>
 			<h1 style="text-align: center; color: black;">Welcome to Anton's Website</h1>
 		</header>
+		<nav>
+			<a class="active" href="/">Home</a>
+<!-- 			<div class="dropdown">
+				<button class="dropbtn">Dropdown 
+					<i class="fa fa-caret-down"></i>
+				</button>
+				<div class="dropdown-content">
+					<a href="#">Link 1</a>
+					<a href="#">Link 2</a>
+					<a href="#">Link 3</a>
+				</div>
+			</div>  -->
+		</nav>
 		<section>
 			<p></p>
 		</section>
