--- a/index.html
+++ b/index.html
@@ -4,7 +4,80 @@
 		<title>Anton's Website</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="styles.css">
+		<style>
+			body{
+				margin: 0;
+				padding: 0;
+				border: 0;
+				font-size: 100%;
+				font: inherit;
+				vertical-align: baseline;
+				background-color: green;
+				color: white;
+			}
+			header {
+				background: lightgreen;
+				padding: 15px;
+				font-family: arial;
+			}
+			nav {
+				font-family: helvetica;
+				background-color: darkgreen;
+			}
+			nav a {
+				float: left;
+				color: white;
+				text-align: center;
+				padding: 14px 16px;
+				text-decoration: none;
+				font-size: 17px;
+			}
+			.dropdown {
+				float: left;
+				overflow: hidden;
+			}
+			.dropdown .dropbtn {
+				font-size: 17px;
+				border: none;
+				outline: none;
+				color: white;
+				padding: 14px 16px;
+				background-color: inherit;
+				font-family: inherit;
+				margin: 0;
+			}
+			nav a:hover, .dropdown:hover .dropbtn, .dropdown-content a:hover {
+				background-color: chartreuse;
+				color: black;
+			}
+			.dropdown-content {
+				display: none;
+				position: absolute;
+				background-color: forestgreen;
+				min-width: 160px;
+				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+				z-index: 1;
+			}
+			.dropdown-content a {
+				float: none;
+				color: white;
+				padding: 12px 16px;
+				text-decoration: none;
+				display: block;
+				text-align: left;
+			}
+			.dropdown:hover .dropdown-content {
+				display: block;
+			}
+			nav a.active {
+				background-color: red;
+				color: white;
+			}
+			section {
+				margin: 1%;
+				font-family: verdana;
+			}
+		</style>
 			<!-- Icon -->
 			<link rel="shortcut icon" href="favicon.png">
 			<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
