--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
 			}
 		</style>
 			<!-- Icon -->
-			<link rel="shortcut icon" href="favicon.png">
-			<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-			<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-			<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-			<link rel="manifest" href="/site.webmanifest">
-			<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#228B22">
+			<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+			<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+			<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+			<link rel="manifest" href="/favicon/site.webmanifest">
+			<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#228B22">
+			<link rel="shortcut icon" href="/favicon/favicon.ico">
 			<meta name="msapplication-TileColor" content="#228B22">
+			<meta name="msapplication-config" content="/favicon/browserconfig.xml">
 			<meta name="theme-color" content="#228B22">
 	</head>
 	
@@ -95,7 +96,8 @@
 		</header>
 		<nav>
 			<a class="active" href="/">Home</a>
-<!-- 			<div class="dropdown">
+<!--	DROPDOWN
+			<div class="dropdown">
 				<button class="dropbtn">Dropdown 
 					<i class="fa fa-caret-down"></i>
 				</button>
