Add the Beat Saber page

--- a/index.html
+++ b/index.html
@@ -96,18 +96,16 @@
 		</header>
 		<nav>
 			<a class="active" href="/">Home</a>
-<!--	DROPDOWN
 			<div class="dropdown">
-				<button class="dropbtn">Dropdown 
+				<button class="dropbtn">Games
 					<i class="fa fa-caret-down"></i>
 				</button>
 				<div class="dropdown-content">
-					<a href="#">Link 1</a>
-					<a href="#">Link 2</a>
-					<a href="#">Link 3</a>
+					<a href="/Games/BeatSaber.html">Beat Saber</a>
 				</div>
-			</div>  -->
+			</div>
 		</nav>
+		<br><br>
 		<section>
 			<p></p>
 		</section>
