Update table + clean-up navbar

--- a/Games/BeatSaber.html
+++ b/Games/BeatSaber.html
@@ -97,17 +97,19 @@
 		<header>
 			<h1 style="text-align: center; color: black;">Beat Saber</h1>
 		</header>
-		<nav>
-			<a href="/">Home</a>
-			<div class="dropdown">
-				<button class="dropbtn">Games
-					<i class="fa fa-caret-down"></i>
-				</button>
-				<div class="dropdown-content">
-					<a href="/Games/BeatSaber.html">Beat Saber</a>
+		<div>
+			<nav>
+				<a href="/">Home</a>
+				<div class="dropdown">
+					<button class="dropbtn">Games
+						<i class="fa fa-caret-down"></i>
+					</button>
+					<div class="dropdown-content">
+						<a href="/Games/BeatSaber.html">Beat Saber Scores</a>
+					</div>
 				</div>
-			</div>
-		</nav>
+			</nav>
+		</div>
 		<br><br>
 		<section>
 			<p>This is a series of tables of my high scores in Beat Saber</p>
@@ -127,7 +129,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>448,562</td>
 				</tr>
 				<tr>
 					<td>Balearic Pumping</td>
@@ -327,7 +329,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>587,589</td>
 					<td></td>
 				</tr>
 				<tr>
@@ -343,7 +345,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td></td>
+					<td>314,947</td>
 					<td></td>
 				</tr>
 				<tr>
