--- a/index.html
+++ b/index.html
@@ -94,18 +94,19 @@
 		<header>
 			<h1 style="text-align: center; color: black;">Welcome to Anton's Website</h1>
 		</header>
-		<nav>
-			<a class="active" href="/">Home</a>
-			<div class="dropdown">
-				<button class="dropbtn">Games
-					<i class="fa fa-caret-down"></i>
-				</button>
-				<div class="dropdown-content">
-					<a href="/Games/BeatSaber.html">Beat Saber</a>
+		<div>
+			<nav>
+				<a class="active" href="/">Home</a>
+				<div class="dropdown">
+					<button class="dropbtn">Games
+						<i class="fa fa-caret-down"></i>
+					</button>
+					<div class="dropdown-content">
+						<a href="/Games/BeatSaber.html">Beat Saber Scores</a>
+					</div>
 				</div>
-			</div>
-		</nav>
-		<br><br>
+			</nav>
+		</div>
 		<section>
 			<p></p>
 		</section>
