Add Extras and Camellia

--- a/Games/BeatSaber.html
+++ b/Games/BeatSaber.html
@@ -357,15 +357,116 @@
 					<td></td>
 				</tr>
 			</table>
-			<h2>Extras and Camellia coming soon.</h3>
-<!-- 			<h3>Extras</h3>
+			<h3>Extras</h3>
 			<table>
-			
+				<tr>
+					<th></th>
+					<th>Easy</th>
+					<th>Normal</th>
+					<th>Hard</th>
+					<th>Expert</th>
+					<th>Expert+</th>
+				</tr>
+				<tr>
+					<td>FitBeat</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Crab Rave</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>POP/STARS</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>One Hope</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Angel Voices</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
 			</table>
 			<h3>Camellia</h3>
 			<table>
-			
-			</table> -->
+				<tr>
+					<th></th>
+					<th>Easy</th>
+					<th>Normal</th>
+					<th>Hard</th>
+					<th>Expert</th>
+					<th>Expert+</th>
+				</tr>
+				<tr>
+					<td>EXiT this Earth's Atmosphere</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td>779,029</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>GHOST</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Light it up</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Crystallized</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td>698,467</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Cycle Hit</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td>902,721</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>WHAT THE CAT?!</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td>631,849</td>
+					<td></td>
+				</tr>
+			</table>
 		</section>
 	</body>
 </html>
